--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "immutability-helper": "^3.1.1",
     "js-file-download": "^0.4.12",
     "notistack": "^3.0.1",
+    "phaser": "^3.90.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
